--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/alexcambose/webcam-base64-streaming#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "express-force-ssl": "^0.3.2",
     "ws": "^6.0.0"
   }
 }
